assets/css/style.css
/* variables for colors */

:root {
  --dark: #004e64;
  --white: #ffffff;
  --light: #9fffcb;
  --gray: #537D88;
  --dark-gray: #3C5158;
}

/* overall style, override browser defaults */
* {
  margin:0;
  box-sizing: border-box;
}

/* general styles */
body {
  min-height: 100vh; /* viewport height */
  display: flex;
  flex-direction: column;
  font-family: 'Lato', sans-serif;
  max-width: 1200px;
  margin: 0 auto;
}

/* all children of the body have padding */
body > * {
  padding: 2rem 3rem;
}

/* headings in Robot font */
h1, h2, h3 {
  font-family: "Roboto Slab", serif;
  text-align: center;
}

/* Header */
header {
  background-color: var(--dark);
  color: var(--light);
  display: flex;
  /* vertically center childern */
  align-items: center;
  /* horizontally push children to the sides */
  justify-content: space-between;
  margin-right: 0;
  /* make header sticky (top of page) */
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  /* always appear on top of any other element */
  z-index: 99;
  padding: 5% 10%;
}

/* link elements in the header should not be underlined and not be blue/purple */
header * {
  text-decoration: none;
  color:inherit;
}

/* logo should be capitalized */
#logo {
  text-transform: capitalize;
}

/* logo link box should not extend too much to the right, it gets too close to the toggle to comfortably tap on mobile */
#logo-link {
  max-width: 60%;
}

/* nav toggle modeled after the Love Running project */
nav {
  position:absolute; /* this removes previous styling, so we need to add it back in */
  right: 5%;
  background-color: var(--dark);
  display: none;
}

/* nav items should not have bullets, but space between instead */
nav ul {
  list-style-type: none;
  padding: 1rem;
}

/* nav toggle: if the toggle is checked, the nav element is displayed */
#nav-toggle:checked ~ nav {
  display:block;
  margin-top: 10rem;
  border: 2px solid var(--light);
}

/* hide checkbox for nav toggle */
#nav-toggle {
  display: none;
}

/* header should not obscure the top of the element navigated to */
#problems h2,
#about h2,
#contact h2{
  margin-top: 15vh;
}

/* Main content */
main {
  /* make main element take up any surplus vertical space so footer is pushed down.*/
  /* shorthand stands for flex-grow flex-shrink flex-basis  */
  flex: 1 0 auto;
  padding: 0;
}

/* positioning of elements in `main` */
main > section {
  padding: 5% 10%;
  width: 100%;
}

h2 {
  margin-top: 2rem;
}

h3 {
  margin-top: 5vh;
}

h4 {
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

p {
  margin: 1rem 0;
}

/* hero section */

/* the div holding the hero image */
#hero {
  min-height: 90vh;
  background: url("../images/hero-img-small.webp") no-repeat center center/cover;
  display: flex;
  justify-content: center;
  padding: 0;
  position: relative;
}

/* the div holding the hero image text */
#hero-text {
  background-color:  var(--dark-gray);
  color: var(--light);
  border-radius: 8px;
  font-size: 150%;
  font-weight: bold;
  height: 8rem;
  opacity: 0.8;
  display: flex;
  align-items: center;
  padding: 0 2rem;
  margin-top: 20%;
}

/* Problems & Solutions section */

/* colors and margins */

#problems {
  background-color: var(--gray);
  color: var(--white);
}

#solutions {
  color: var(--dark-gray);
}

/* inline links */

#solutions a {
  color: var(--dark);
}

#problems-solutions p {
  margin: 0.5rem 0;
}

/* references about the workshops */
.reference {
  text-align: right;
  padding:15px;
  border: solid 2px;
  border-radius: 4px;
  box-shadow: inset 0 0 10px;
  margin-left: 0.5rem !important;
  margin-right: 0.5rem !important;
}

/* quoted text within a reference */
.quote {
  font-style: italic;
  display: inline-block;
  margin-bottom: 1rem;
}

.quote::before {
  content: "“";
}

.quote::after {
  content: "”";
}

/* divs containing the text*/
.p-cont {
  display: flex;
  flex-direction: column;
  padding: 1rem;
}

/* divs containing the text and the images */
.color-pic-box {
  display: flex;
  justify-content: space-between;
  margin: 2vw 0;
}

#frustrated {
  margin-bottom: 0px;
}

#frustrated-cont {
  margin-top: 0px;
}

#success {
  margin-bottom: 0px;
}

#success-cont {
  margin-top: 0px;
}

/* divs containing the images */
.grayscale-pic {
  width: 100%;
  height: 100%;
  opacity: 0.6;
}

/* set the background image for each box */

#millions .grayscale-pic {
  background: url("../images/lots-of-paper-grayscale.webp") no-repeat center center/cover;
}

#frustrated .grayscale-pic {
  background: url("../images/frustrated-grayscale.webp") no-repeat center center/cover;
}

#learn-list .grayscale-pic {
  background: url("../images/library.webp") no-repeat center center/cover;
}

#success .grayscale-pic {
  background: url("../images/presentation.webp") no-repeat center center/cover;
}

/* pictures in this section should not be gray, and less tinted */
#solutions .grayscale-pic {
  filter: grayscale(0);
  opacity: 0.8;
}

/* divs containing the text and the images */
.color-cover {
  width: 100%;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
}

/* set size of boxes */

#millions .color-cover {
  height: 60vh;
}

#frustrated .color-cover {
  height: 100vh;
}

#learn-list .color-cover {
  height: 140vh;
}

#learn-list ul {
  padding-left: 1rem;
}

#success .color-cover {
  height: 70vh;
}

#problems .color-cover {
  background-color: var(--dark);
}

#solutions .color-cover {
  background-color: var(--light);
}

/* About section */

#about {
  background-color:  var(--light);
  color: var(--dark);
  /* get rid of side padding to make `why-me` image extend the whole width of the site */
  padding-left: 0;
  padding-right: 0;
}

/* add side padding back for other elements in this section, so they match with the rest of the site */

#about > h2, #about > h3, #about >p {
  padding-left: 10%;
  padding-right: 10%;
}

#about > h2 {
  margin-bottom: 2%;
}
/* ... */

